Webpack middleware integrado a express

--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,23 @@
 {
   "presets": [
-    [
-      "minify"
-    ],
-    [
-      "@babel/preset-env",
-      {
-        "targets": { "node": "current" }
-      }
-    ]
+      [
+          "minify"
+      ],
+      [
+          "@babel/preset-env",
+          {
+              "targets":{"node": "current"}
+          }
+       ]
   ],
   "plugins": [
-    [
-      "module-resolver",
-      {
-        "root": "./",
-        "alias": {
-          "@s": "./server"
-        }
-      }
-    ]
+      [
+          "module-resolver",{
+              "root": "./",
+              "alias":{
+                  "@s":"./server"
+              }
+          }
+      ]
   ]
 }
