--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build:client": "npm run clean:client && webpack --config ./webpack.config.js --mode production",
     "lint-server": "eslint ./server",
     "clearlogs": "rimraf ./server/logs/*.log"
-
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
@@ -24,6 +23,7 @@
     "express-handlebars": "^5.3.2",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^6.0.5",
     "morgan": "~1.9.1",
     "rimraf": "^3.0.2",
@@ -54,7 +54,6 @@
     "eslint-webpack-plugin": "^3.1.1",
     "mini-css-extract-plugin": "^1.6.0",
     "prettier": "^2.5.1",
-    
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   }
